--- a/leaders.html
+++ b/leaders.html
@@ -5,6 +5,7 @@
 <table cellpadding=4 cellspacing=0 width=526 border=0>
 <tr>
 <td bgcolor=#F2F2ED>
+<a href="leader22.html"><b>2022</b></a><br>
 <a href="leader21.html"><b>2021</b></a><br>
 <a href="leader20.html"><b>2020</b></a><br>
 <a href="leader19.html"><b>2019</b></a><br>
