--- a/playoff.html
+++ b/playoff.html
@@ -9,6 +9,12 @@
     <td><b>Semifinal</b></td>
     <td><b>Points Champion</td>
     <td><b>2nd Points</b></td></tr>
+<tr><td>2022</td>
+    <td>Sam(530)-Roger(325)</td>
+    <td>Sam(670)-Steven(555)</td>
+    <td>Roger(395)-States(275)</td>
+    <td>Steven (11770)</td>
+    <td>Sam (11585)</td></tr>
 <tr><td>2021</td>
     <td>Grant(595)-Sam(590)</td>
     <td>Grant(680)-Matthew(630)</td>
