--- a/treasury.html
+++ b/treasury.html
@@ -4,15 +4,15 @@
 </table>
 <table border=2>
 <tr><td><b>Prize</b></td>
-    <td width=42><b>Matthew</b></td>
-    <td width=42><b>Rich</b></td>
-    <td width=42><b>Steven</b></td>
-    <td width=42><b>Grant</b></td>
-    <td width=42><b>Mike</b></td>
-    <td width=42><b>States</b></td>
     <td width=42><b>Roger</b></td>
-    <td width=42><b>Randy</b></td>
+    <td width=42><b>States</b></td>
+    <td width=42><b>Mike</b></td>
     <td width=42><b>Sam</b></td>
+    <td width=42><b>Grant</b></td>
+    <td width=42><b>Rich</b></td>
+    <td width=42><b>Matthew</b></td>
+    <td width=42><b>Randy</b></td>
+    <td width=42><b>Steven</b></td>
     <td width=42><b>John</b></td></tr>
 <tr><td>Fantasy Bowl winner</td>
     <td align="right">0</td>
@@ -38,6 +38,7 @@
     <td align="right">0</td></tr>
 <tr><td>Make playoffs</td>
     <td align="right">$50</td>
+    <td align="right">$50</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
@@ -45,8 +46,7 @@
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">$50</td></tr>
+    <td align="right">0</td></tr>
 <tr><td>Most points for year</td>
     <td align="right">0</td>
     <td align="right">0</td>
@@ -60,9 +60,9 @@
     <td align="right">0</td></tr>
 <tr><td>2nd most points for year</td>
     <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
     <td align="right">$50</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
@@ -70,25 +70,25 @@
     <td align="right">0</td>
     <td align="right">0</td></tr>
 <tr><td>Highest score for week</td>
-    <td align="right">$30</td>
-    <td align="right">$30</td>
-    <td align="right">$15</td>
     <td align="right">$15</td>
     <td align="right">0</td>
-    <td align="right">$15</td>
-    <td align="right">$30</td>
     <td align="right">$30</td>
     <td align="right">$60</td>
-    <td align="right">$45</td></tr>
-<tr><td>Total</td>
-    <td align="right">$80</td>
-    <td align="right">$80</td>
-    <td align="right">$15</td>
-    <td align="right">$185</td>
     <td align="right">0</td>
-    <td align="right">$15</td>
     <td align="right">$30</td>
     <td align="right">$30</td>
-    <td align="right">$270</td>
-    <td align="right">$95</td></tr>
+    <td align="right">$45</td>
+    <td align="right">$30</td>
+    <td align="right">$30</td></tr>
+<tr><td>Total</td>
+    <td align="right">$65</td>
+    <td align="right">$50</td>
+    <td align="right">$30</td>
+    <td align="right">$280</td>
+    <td align="right">0</td>
+    <td align="right">$30</td>
+    <td align="right">$30</td>
+    <td align="right">$45</td>
+    <td align="right">$240</td>
+    <td align="right">$30</td></tr>
 </table>
