--- a/week18.html
+++ b/week18.html
@@ -125,15 +125,15 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (9)</b></font></td></tr>
-<tr><td>Hurts (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Hurts (D)</td>     <td></td><td align=right>150</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>85</td></tr>
 <tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
-<tr><td>ABrown (D)</td>    <td></td><td align=right>***</td></tr>
-<tr><td>DSmith (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>ABrown (D)</td>    <td></td><td align=right>0</td></tr>
+<tr><td>DSmith (D)</td>    <td></td><td align=right>105</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Elliott (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Elliott (D)</td>   <td></td><td align=right>55</td></tr>
 <tr><td>GWilson</td>       <td></td><td align=right>40</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>435</td></tr>
 </table>
 </td>
 <td>
@@ -169,7 +169,7 @@
 <tr><td><font size=2>Steven(9)</font></td>
     <td><font size=2>12</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>11335</font></td>
+    <td><font size=2>11770</font></td>
     <td><font size=2>8400</font></td>
     <td><font size=2>1235</font></td>
     <td><font size=2>280</font></td>
@@ -253,5 +253,5 @@
     <td><font size=2>11145</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>115</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
 </table>
