--- a/board23.html
+++ b/board23.html
@@ -40,7 +40,7 @@
     <td>Stefon<br>Diggs</td>
     <td>Dameon<br>Pierce</td>
     <td>Davante<br>Adams</td>
-    <td>Amon-Ra<br>St</td>
+    <td>Amon-Ra<br>St Brown</td>
     <td>CeeDee<br>Lamb</td>
     <td>AJ<br>Brown</td>
     <td>Joe<br>Mixon</td>
@@ -199,7 +199,7 @@
     <td>Jason<br>Myers</td>
     <td>David<br>Njoku</td>
     <td>D'Onta<br>Foreman</td>
-    <td>Dorian<br>Thompson-Robinson</td>
+    <td>Dorian<br>ThompsonRobinson</td>
     <td>Wil<br>Lutz</td></tr>
 <tr><td>18</td>
     <td>Odell<br>Beckham</td>
