--- a/pickups.html
+++ b/pickups.html
@@ -1,54 +1,54 @@
 <table cellpadding=0 cellspacing=0 width=650 border=0>
 <tr>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>Roger</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>States</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Rich</b></font></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Eno Benjamin/Nick Sciba</td>
-<td width=50>10/16</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Skylar Thompson/Hassan Haskins</td>
-<td width=50>10/12</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Robert Tonyan/JK Dobbins</td>
-<td width=50>10/21</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Devante Parker/Skylar Thompson</td>
-<td width=50>10/24</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Dalton Schultz/Eno Benjamin</td>
-<td width=50>11/16</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Nick Sciba/Zamir White</td>
-<td width=50>10/29</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Evan Engram/Robert Tonyan</td>
-<td width=50>12/21</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Chigoziem Okonkwo/Sam Howell</td>
-<td width=50>12/13</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
@@ -59,60 +59,188 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370>Noah Fant/DeVante Parker</td>
-<td width=50>12/28</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Mike</b></font></td>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>Sam</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>John</b></font></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Gerald Everett/Daniel Bellinger</td>
-<td width=50>9/24</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Jakobi Meyers/Jordan Mason</td>
-<td width=50>10/16</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Latavius Murray/Dalton Schultz</td>
-<td width=50>10/18</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>D'Onta Foreman/Cole Kmet</td>
-<td width=50>10/20</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Jimmy Garoppolo/Jameis Winston</td>
-<td width=50>10/27</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Daniel Jones/Kadarius Toney</td>
-<td width=50>10/25</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Irv Smith/Allen Lazard</td>
-<td width=50>10/30</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Sam Howell/Wil Lutz</td>
-<td width=50>1/4</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>States</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Steven</b></font></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Randy</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Mike</b></font></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
@@ -129,118 +257,54 @@
 </tr>
 <tr>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>Grant</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Rich</b></font></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Tua Tagovailoa/Nico Collins</td>
-<td width=50>9/20</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Kyren Williams/Caleb Shudak</td>
-<td width=50>10/25</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Greg Dulcich/Isaiah Likely</td>
-<td width=50>10/25</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>Christian Watson/Keaontay Ingram</td>
-<td width=50>11/15</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370>Juwan Johnson/Greg Dulcich</td>
-<td width=50>12/31</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-</tr>
-<tr>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>Matthew</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Randy</b></font></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Bailey Zappe/Chase Claypool</td>
-<td width=50>10/4</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Devin Duvernay/Elijah Moore</td>
-<td width=50>10/11</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Justin Fields/Matt Ryan</td>
-<td width=50>10/30</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Mecole Hardman/Tyrion Davis-Price</td>
-<td width=50>11/8</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Isaiah Likely/Melvin Gordon</td>
-<td width=50>11/8</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Jameson Williams/Matt Prater</td>
-<td width=50>11/23</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Zay Jones/Isaiah Likely</td>
-<td width=50>12/20</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Caleb Shudak/Devin Duvernay</td>
-<td width=50>11/27</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
@@ -251,72 +315,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370>Skylar Thompson/Jameson Williams</td>
-<td width=50>1/3</td>
-</tr></table></td>
-</tr>
-<tr>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Steven</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>John</b></font></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Hayden Hurst/Christian Watson</td>
-<td width=50>10/16</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Jeff Wilson/Nyheim Hines</td>
-<td width=50>9/16</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Cole Kmet/Dustin Hopkins</td>
-<td width=50>11/13</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Jared Goff/Kyle Philips</td>
-<td width=50>10/4</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Trestan Ebner/Hayden Hurst</td>
-<td width=50>11/18</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Tyler Boyd/Robert Woods</td>
-<td width=50>10/27</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>Gardner Minshew/Trestan Ebner</td>
-<td width=50>12/22</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>Jason Myers/Brandon McManus</td>
-<td width=50>11/5</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>5)</td>
 <td width=370></td>
 <td width=50></td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370>Brock Purdy/Nick Folk</td>
-<td width=50>12/5</td>
 </tr></table></td>
 </tr>
 </table>
@@ -324,56 +324,8 @@
 <table width=650 border=2>
 <tr bgcolor="#000A78">
 <td colspan=2><font size=4 color='white'><center>Trades</td></tr>
-<tr><td width=50>9/13</td>
+<tr><td width=50>9/7</td>
 <td width=600>
-Free Pickups:<br>
-States - Younghoe Koo/Rodrigo Blankenship (9/13)<br>
-Sam - Jordan Mason/Jameson Williams (9/13)<br>
-Sam - David Njoku/Trey Lance (9/27)<br>
-Rich - Caleb Huntley/Javonte Williams (10/6)<br>
-Grant - Tyler Lockett/Treylon Burks (10/11)<br>
-States - Geno Smith/Kyren Williams (10/11)<br>
-Mike - Brett Maher/Rashaad Penny (10/16)<br>
-Steven - Treylon Burks/Breece Hall (10/27)<br>
-Mike - Nyheim Hines/Irv Smith (11/5)<br>
-Mike - Allen Lazard Michael Thomas (11/5)<br>
-Sam - Wil Lutz/Rashod Bateman (11/10)<br>
-Randy - Kadarius Toney/Mecole Hardman (11/18)<br>
-John - Nick Folk/Zach Ertz (11/20)<br>
-Sam - JK Dobbins/Chase Edmonds (11/22)<br>
-Matthew - Josh Palmer/Wan'Dale Robinson (11/22)<br>
-John - Zonovan Knight/Allen Robinson (11/29)<br>
-States - Zamir White/Nick Sciba (11/29)<br>
-Grant - Jordan Mason/Darnell Mooney (11/30)<br>
-Sam - Mike White/Clyde Edwards-Helaire (11/30)<br>
-Grant - Tyler Conklin/Kyle Pitts (12/4)<br>
-Randy - Darius Slayton/Caleb Shudak (12/14)<br>
-Roger - Jerick McKinnon/Jonathan Taylor (12/21)<br>
-Sam - Cameron Dicker/Kyler Murray (12/27)
-</td></tr>
-<tr><td width=50>9/30</td>
-<td width=600>
-Sam - Najee Harris, Chris Olave, Cole Kmet<br>
-Steven - David Montgomery, Khalil Herbert, Jahan Dotson
-</td></tr>
-<tr><td width=50>10/11</td>
-<td width=600>
-Mike - David Njoku<br>
-Sam - Jaylen Warren
-</td></tr>
-<tr><td width=50>11/3</td>
-<td width=600>
-Roger - Leonard Fournette, Graham Gano<br>
-John - CeeDee Lamb, Brandon McManus
-</td></tr>
-<tr><td width=50>11/18</td>
-<td width=600>
-Rich - Diontae Johnson<br>
-Randy - Matt Prater
-</td></tr>
-<tr><td width=50>12/11</td>
-<td width=600>
-States - Cade York, Derek Carr<br>
-John - DeShaun Watson, Pat Freiermuth
+Free Pickups:
 </td></tr>
 </table>
