--- a/board23.html
+++ b/board23.html
@@ -4,16 +4,16 @@
 </table>
 <table border=2>
 <tr><td><b>Round</b></td>
-    <td width=42><b>Roger</b></td>
-    <td width=42><b>Rich</b></td>
-    <td width=42><b>Sam</b></td>
-    <td width=42><b>John</b></td>
-    <td width=42><b>States</b></td>
-    <td width=42><b>Steven</b></td>
-    <td width=42><b>Randy</b></td>
-    <td width=42><b>Mike</b></td>
-    <td width=42><b>Grant</b></td>
-    <td width=42><b>Matthew</b></td></tr>
+    <td width=64><b>Roger</b></td>
+    <td width=64><b>Rich</b></td>
+    <td width=64><b>Sam</b></td>
+    <td width=64><b>John</b></td>
+    <td width=64><b>States</b></td>
+    <td width=64><b>Steven</b></td>
+    <td width=64><b>Randy</b></td>
+    <td width=64><b>Mike</b></td>
+    <td width=64><b>Grant</b></td>
+    <td width=64><b>Matthew</b></td></tr>
 <tr><td>1</td>
     <td>Bijan<br>Robinson</td>
     <td>Patrick<br>Mahomes</td>
@@ -199,7 +199,7 @@
     <td>Jason<br>Myers</td>
     <td>David<br>Njoku</td>
     <td>D'Onta<br>Foreman</td>
-    <td>Dorian<br>ThompsonRobinson</td>
+    <td>Dorian<br>Thompson-Robinson</td>
     <td>Wil<br>Lutz</td></tr>
 <tr><td>18</td>
     <td>Odell<br>Beckham</td>
