--- a/week1.html
+++ b/week1.html
@@ -11,7 +11,7 @@
 <tr><td>Dobbins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Robinson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Beckham</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>ACarlson</td>      <td></td><td align=right>0</td></tr>
@@ -52,9 +52,9 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (8)</b></font></td></tr>
 <tr><td>Lawrence</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
 <tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Addison</td>       <td></td><td align=right>0</td></tr>
@@ -144,7 +144,7 @@
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Okonkwo</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
