--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <tr>
 <td bgcolor=#F2F2ED>
 <b>Week</b>
-<a href="week1.html"><b>1P</b></a><br>
+<a href="week1.html"><b>1</b></a>
+<a href="week2.html"><b>2P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -58,45 +59,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>Steven(9)</font></td>
-    <td><font size=2>12</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>11770</font></td>
-    <td><font size=2>8400</font></td>
-    <td><font size=2>1235</font></td>
-    <td><font size=2>280</font></td>
-    <td><font size=2>2</font></td>
-<tr><td><font size=2>Roger(1)</font></td>
-    <td><font size=2>10</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>10505</font></td>
-    <td><font size=2>9275</font></td>
-    <td><font size=2>845</font></td>
-    <td><font size=2>325</font></td>
+<tr><td><font size=2>Randy(7)</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>Matthew(7)</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>10465</font></td>
-    <td><font size=2>10035</font></td>
-    <td><font size=2>975</font></td>
-    <td><font size=2>255</font></td>
-    <td><font size=2>2</font></td>
-<tr><td><font size=2>Mike(3)</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>10680</font></td>
-    <td><font size=2>9425</font></td>
-    <td><font size=2>1450</font></td>
-    <td><font size=2>305</font></td>
-    <td><font size=2>2</font></td>
-<tr><td><font size=2>Grant(5)</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>9105</font></td>
-    <td><font size=2>9180</font></td>
-    <td><font size=2>850</font></td>
-    <td><font size=2>245</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>775</font></td>
+    <td><font size=2>430</font></td>
+    <td><font size=2>775</font></td>
+    <td><font size=2>775</font></td>
+    <td><font size=2>1</font></td>
+<tr><td><font size=2>Grant(9)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>505</font></td>
+    <td><font size=2>400</font></td>
+    <td><font size=2>505</font></td>
+    <td><font size=2>505</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Roger(1)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>430</font></td>
+    <td><font size=2>775</font></td>
+    <td><font size=2>430</font></td>
+    <td><font size=2>430</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Sam(3)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>400</font></td>
+    <td><font size=2>505</font></td>
+    <td><font size=2>400</font></td>
+    <td><font size=2>400</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>States(5)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>230</font></td>
+    <td><font size=2>345</font></td>
+    <td><font size=2>230</font></td>
+    <td><font size=2>230</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -106,46 +107,46 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Sam(4)</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>11585</font></td>
-    <td><font size=2>10370</font></td>
-    <td><font size=2>1280</font></td>
-    <td><font size=2>335</font></td>
-    <td><font size=2>4</font></td>
-<tr><td><font size=2>States(2)</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>9485</font></td>
-    <td><font size=2>10090</font></td>
-    <td><font size=2>795</font></td>
-    <td><font size=2>275</font></td>
+<tr><td><font size=2>Mike(8)</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>10570</font></td>
-    <td><font size=2>8555</font></td>
-    <td><font size=2>1175</font></td>
-    <td><font size=2>190</font></td>
-    <td><font size=2>3</font></td>
-<tr><td><font size=2>Rich(6)</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>10780</font></td>
-    <td><font size=2>9850</font></td>
-    <td><font size=2>840</font></td>
-    <td><font size=2>270</font></td>
-    <td><font size=2>2</font></td>
-<tr><td><font size=2>John(10)</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>10</font></td>
-    <td><font size=2>10640</font></td>
-    <td><font size=2>11145</font></td>
-    <td><font size=2>995</font></td>
-    <td><font size=2>115</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>685</font></td>
+    <td><font size=2>460</font></td>
+    <td><font size=2>685</font></td>
+    <td><font size=2>685</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>John(4)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>385</font></td>
+    <td><font size=2>210</font></td>
+    <td><font size=2>385</font></td>
+    <td><font size=2>385</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Steven(6)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>345</font></td>
+    <td><font size=2>230</font></td>
+    <td><font size=2>345</font></td>
+    <td><font size=2>345</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Rich(2)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>460</font></td>
+    <td><font size=2>685</font></td>
+    <td><font size=2>460</font></td>
+    <td><font size=2>460</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Matthew(10)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>210</font></td>
+    <td><font size=2>385</font></td>
+    <td><font size=2>210</font></td>
+    <td><font size=2>210</font></td>
+    <td><font size=2>0</font></td>
 </table>
 </table>
 </body>
