--- a/strength.html
+++ b/strength.html
@@ -5,103 +5,103 @@
 <table border=2>
 <tr><td><b>Position</b></td>
     <td width=42><b>Roger</b></td>
-    <td width=42><b>States</b></td>
-    <td width=42><b>Mike</b></td>
-    <td width=42><b>Sam</b></td>
-    <td width=42><b>Grant</b></td>
     <td width=42><b>Rich</b></td>
-    <td width=42><b>Matthew</b></td>
-    <td width=42><b>Randy</b></td>
+    <td width=42><b>Sam</b></td>
+    <td width=42><b>John</b></td>
+    <td width=42><b>States</b></td>
     <td width=42><b>Steven</b></td>
-    <td width=42><b>John</b></td></tr>
+    <td width=42><b>Randy</b></td>
+    <td width=42><b>Mike</b></td>
+    <td width=42><b>Grant</b></td>
+    <td width=42><b>Matthew</b></td></tr>
 <tr><td align='right'>QB</td>
-    <td align='right'>3135</td>
-    <td align='right'>1845</td>
-    <td align='right'>3185</td>
-    <td align='right'>1840</td>
-    <td align='right'>2125</td>
-    <td align='right'>3260</td>
-    <td align='right'>2570</td>
-    <td align='right'>2845</td>
-    <td align='right'>3575</td>
-    <td align='right'>1575</td></tr>
+    <td align='right'>55</td>
+    <td align='right'>80</td>
+    <td align='right'>0</td>
+    <td align='right'>25</td>
+    <td align='right'>105</td>
+    <td align='right'>125</td>
+    <td align='right'>50</td>
+    <td align='right'>135</td>
+    <td align='right'>160</td>
+    <td align='right'>0</td></tr>
 <tr><td align='right'>Best RB</td>
-    <td align='right'>705</td>
-    <td align='right'>1335</td>
-    <td align='right'>1925</td>
-    <td align='right'>1710</td>
-    <td align='right'>1750</td>
-    <td align='right'>1570</td>
-    <td align='right'>1450</td>
-    <td align='right'>1405</td>
-    <td align='right'>1865</td>
-    <td align='right'>710</td></tr>
+    <td align='right'>100</td>
+    <td align='right'>185</td>
+    <td align='right'>275</td>
+    <td align='right'>30</td>
+    <td align='right'>50</td>
+    <td align='right'>55</td>
+    <td align='right'>190</td>
+    <td align='right'>105</td>
+    <td align='right'>135</td>
+    <td align='right'>25</td></tr>
 <tr><td align='right'>Other RB's</td>
-    <td align='right'>1060</td>
-    <td align='right'>1145</td>
-    <td align='right'>1105</td>
-    <td align='right'>1120</td>
-    <td align='right'>1070</td>
-    <td align='right'>1490</td>
-    <td align='right'>1680</td>
-    <td align='right'>1320</td>
-    <td align='right'>820</td>
-    <td align='right'>1340</td></tr>
+    <td align='right'>50</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>30</td>
+    <td align='right'>0</td>
+    <td align='right'>50</td>
+    <td align='right'>25</td>
+    <td align='right'>100</td>
+    <td align='right'>50</td>
+    <td align='right'>0</td></tr>
 <tr><td align='right'>Best WR</td>
-    <td align='right'>1700</td>
-    <td align='right'>1555</td>
-    <td align='right'>665</td>
-    <td align='right'>2015</td>
-    <td align='right'>730</td>
-    <td align='right'>1015</td>
-    <td align='right'>890</td>
-    <td align='right'>1170</td>
-    <td align='right'>1675</td>
-    <td align='right'>1285</td></tr>
+    <td align='right'>100</td>
+    <td align='right'>125</td>
+    <td align='right'>30</td>
+    <td align='right'>110</td>
+    <td align='right'>35</td>
+    <td align='right'>35</td>
+    <td align='right'>255</td>
+    <td align='right'>50</td>
+    <td align='right'>130</td>
+    <td align='right'>75</td></tr>
 <tr><td align='right'>Other WR's</td>
-    <td align='right'>1285</td>
-    <td align='right'>1530</td>
-    <td align='right'>1165</td>
-    <td align='right'>1210</td>
-    <td align='right'>1320</td>
-    <td align='right'>1490</td>
-    <td align='right'>540</td>
-    <td align='right'>1000</td>
-    <td align='right'>1370</td>
-    <td align='right'>1185</td></tr>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>25</td>
+    <td align='right'>75</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>55</td>
+    <td align='right'>25</td>
+    <td align='right'>0</td>
+    <td align='right'>50</td></tr>
 <tr><td align='right'>TE</td>
-    <td align='right'>700</td>
-    <td align='right'>365</td>
-    <td align='right'>325</td>
-    <td align='right'>1415</td>
-    <td align='right'>260</td>
-    <td align='right'>505</td>
-    <td align='right'>735</td>
-    <td align='right'>900</td>
-    <td align='right'>480</td>
-    <td align='right'>1275</td></tr>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td></tr>
 <tr><td align='right'>K</td>
-    <td align='right'>1485</td>
-    <td align='right'>1280</td>
-    <td align='right'>1190</td>
-    <td align='right'>1230</td>
-    <td align='right'>1480</td>
-    <td align='right'>1125</td>
-    <td align='right'>1390</td>
-    <td align='right'>1185</td>
-    <td align='right'>810</td>
-    <td align='right'>1440</td></tr>
+    <td align='right'>40</td>
+    <td align='right'>70</td>
+    <td align='right'>60</td>
+    <td align='right'>0</td>
+    <td align='right'>15</td>
+    <td align='right'>80</td>
+    <td align='right'>45</td>
+    <td align='right'>140</td>
+    <td align='right'>30</td>
+    <td align='right'>25</td></tr>
 <tr><td align='right'>R</td>
-    <td align='right'>435</td>
-    <td align='right'>430</td>
-    <td align='right'>1120</td>
-    <td align='right'>1045</td>
-    <td align='right'>370</td>
-    <td align='right'>325</td>
-    <td align='right'>1210</td>
-    <td align='right'>745</td>
-    <td align='right'>1175</td>
-    <td align='right'>1830</td></tr>
+    <td align='right'>85</td>
+    <td align='right'>0</td>
+    <td align='right'>10</td>
+    <td align='right'>115</td>
+    <td align='right'>25</td>
+    <td align='right'>0</td>
+    <td align='right'>155</td>
+    <td align='right'>130</td>
+    <td align='right'>0</td>
+    <td align='right'>35</td></tr>
 <tr><td align='right'></td>
     <td align='right'></td>
     <td align='right'></td>
@@ -114,14 +114,14 @@
     <td align='right'></td>
     <td align='right'></td></tr>
 <tr><td align='right'>Total</td>
-    <td align='right'>10505</td>
-    <td align='right'>9485</td>
-    <td align='right'>10680</td>
-    <td align='right'>11585</td>
-    <td align='right'>9105</td>
-    <td align='right'>10780</td>
-    <td align='right'>10465</td>
-    <td align='right'>10570</td>
-    <td align='right'>11770</td>
-    <td align='right'>10640</td></tr>
+    <td align='right'>430</td>
+    <td align='right'>460</td>
+    <td align='right'>400</td>
+    <td align='right'>385</td>
+    <td align='right'>230</td>
+    <td align='right'>345</td>
+    <td align='right'>775</td>
+    <td align='right'>685</td>
+    <td align='right'>505</td>
+    <td align='right'>210</td></tr>
 </table>
