--- a/roster.html
+++ b/roster.html
@@ -10,11 +10,11 @@
 <tr><td>BUF</td><td>Josh Allen             </td></tr>
 <tr><td>DET</td><td>Jared Goff             </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>BAL</td><td>JK Dobbins             </td></tr>
 <tr><td>BUF</td><td>James Cook             </td></tr>
 <tr><td>PHI</td><td>Rashaad Penny          </td></tr>
 <tr><td>PIT</td><td>Jaylen Warren          </td></tr>
 <tr><td>PHI</td><td>Kenneth Gainwell       </td></tr>
+<tr><td>LAC</td><td>Joshua Kelley          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Stefon Diggs           </td></tr>
 <tr><td>PHI</td><td>DeVonta Smith          </td></tr>
@@ -64,7 +64,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Sam (3)</b></font></td></tr>
 <tr><td>BAL</td><td>Lamar Jackson          </td></tr>
-<tr><td>NYJ</td><td>Aaron Rodgers          </td></tr>
+<tr><td> GB</td><td>Jordan Love            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Christian McCaffrey    </td></tr>
 <tr><td> LV</td><td>Josh Jacobs            </td></tr>
@@ -102,14 +102,14 @@
 <tr><td>DEN</td><td>Samaje Perine          </td></tr>
 <tr><td> GB</td><td>AJ Dillon              </td></tr>
 <tr><td>ATL</td><td>Tyler Allgeier         </td></tr>
-<tr><td>IND</td><td>Deon Jackson           </td></tr>
+<tr><td>LAR</td><td>Kyren Williams         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Justin Jefferson       </td></tr>
 <tr><td>DET</td><td>Amon-Ra St Brown       </td></tr>
 <tr><td>CHI</td><td>DJ Moore               </td></tr>
 <tr><td>PIT</td><td>Diontae Johnson        </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td> NO</td><td>Taysom Hill            </td></tr>
+<tr><td> NE</td><td>Hunter Henry           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Graham Gano            </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -278,7 +278,6 @@
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
 <tr><td>BUF</td><td>Gabe Davis             </td></tr>
 <tr><td>DEN</td><td>Courtland Sutton       </td></tr>
-<tr><td>CIN</td><td>Tyler Boyd             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -288,6 +287,7 @@
 <tr><td>HOU</td><td>CJ Stroud              </td></tr>
 <tr><td>MIA</td><td>Devon Achane           </td></tr>
 <tr><td>NYG</td><td>Eric Gray              </td></tr>
+<tr><td>LAR</td><td>Puka Nacua             </td></tr>
 </table>
 </td>
 <td>
