--- a/pickups.html
+++ b/pickups.html
@@ -75,8 +75,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Kyren Williams/Deon Jackson</td>
+<td width=50>9/12</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -267,8 +267,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Puka Nacua/Tyler Boyd</td>
+<td width=50>9/12</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -324,8 +324,11 @@
 <table width=650 border=2>
 <tr bgcolor="#000A78">
 <td colspan=2><font size=4 color='white'><center>Trades</td></tr>
-<tr><td width=50>9/7</td>
+<tr><td width=50>9/12</td>
 <td width=600>
-Free Pickups:
+Free Pickups:<br>
+Sam - Jordan Love/Aaron Rodgers (9/12)<br>
+John - Hunter Henry/Taysom Hill (9/12)<br>
+Roger - Joshua Kelley/JK Dobbins (9/13)
 </td></tr>
 </table>
