--- a/week1.html
+++ b/week1.html
@@ -9,7 +9,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
 <tr><td>JAllen</td>        <td></td><td align=right>55</td></tr>
 <tr><td>Dobbins</td>       <td></td><td align=right>50</td></tr>
-<tr><td>Robinson</td>      <td></td><td align=right>100</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>100</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>100</td></tr>
 <tr><td>Beckham</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
