--- a/week2.html
+++ b/week2.html
@@ -52,11 +52,11 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (5)</b></font></td></tr>
 <tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Mattison</td>      <td></td><td align=right>0</td></tr>
-<tr><td>RWhite</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Dulcich</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
+<tr><td>Musgrave</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Moody</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Young</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -82,7 +82,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (7)</b></font></td></tr>
 <tr><td>GSmith</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Olave</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
@@ -100,7 +100,7 @@
 <tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Okonkwo</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -113,7 +113,7 @@
 <tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
 <tr><td>BHall</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DCarlson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
