--- a/pickups.html
+++ b/pickups.html
@@ -87,8 +87,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Tank Dell/Michael Mayer</td>
+<td width=50>9/19</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -139,8 +139,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Zack Moss/Brandin Cooks</td>
+<td width=50>9/19</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -198,13 +198,13 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Kareem Hunt/Antonio Gibson</td>
+<td width=50>9/20</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Latavius Murray/D'Onta Foreman</td>
+<td width=50>9/19</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -262,8 +262,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Justice Hill/Zach Evans</td>
+<td width=50>9/20</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -279,8 +279,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jerome Ford/Eric Gray</td>
+<td width=50>9/19</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -329,6 +329,7 @@
 Free Pickups:<br>
 Sam - Jordan Love/Aaron Rodgers (9/12)<br>
 John - Hunter Henry/Taysom Hill (9/12)<br>
-Roger - Joshua Kelley/JK Dobbins (9/13)
+Roger - Joshua Kelley/JK Dobbins (9/13)<br>
+States - Hayden Hurst/Greg Dulcich (9/20)
 </td></tr>
 </table>
