--- a/roster.html
+++ b/roster.html
@@ -115,7 +115,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Blake Grupe            </td></tr>
 <tr><td>LAC</td><td>Quentin Johnston       </td></tr>
-<tr><td> LV</td><td>Michael Mayer          </td></tr>
+<tr><td>HOU</td><td>Tank Dell              </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -134,7 +134,7 @@
 <tr><td>PIT</td><td>George Pickens         </td></tr>
 <tr><td> KC</td><td>Kadarius Toney         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>DEN</td><td>Greg Dulcich           </td></tr>
+<tr><td>CAR</td><td>Hayden Hurst           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>Matt Gay               </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -155,11 +155,11 @@
 <tr><td>CLE</td><td>Nick Chubb             </td></tr>
 <tr><td>TEN</td><td>Derrick Henry          </td></tr>
 <tr><td>BUF</td><td>Damien Harris          </td></tr>
+<tr><td>IND</td><td>Zack Moss              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>AJ Brown               </td></tr>
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
-<tr><td>DAL</td><td>Brandin Cooks          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
 <tr><td>TEN</td><td>Chigoziem Okonkwo      </td></tr>
@@ -186,8 +186,8 @@
 <tr><td>CIN</td><td>Joe Mixon              </td></tr>
 <tr><td> NE</td><td>Rhamondre Stevenson    </td></tr>
 <tr><td> GB</td><td>Aaron Jones            </td></tr>
-<tr><td>WAS</td><td>Antonio Gibson         </td></tr>
 <tr><td> NE</td><td>Ezekiel Elliott        </td></tr>
+<tr><td>CLE</td><td>Kareem Hunt            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Tyreek Hill            </td></tr>
 <tr><td> NO</td><td>Chris Olave            </td></tr>
@@ -213,7 +213,7 @@
 <tr><td>LAC</td><td>Austin Ekeler          </td></tr>
 <tr><td>DEN</td><td>Javonte Williams       </td></tr>
 <tr><td>WAS</td><td>Brian Robinson         </td></tr>
-<tr><td>CHI</td><td>D'Onta Foreman         </td></tr>
+<tr><td>BUF</td><td>Latavius Murray        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYJ</td><td>Garrett Wilson         </td></tr>
 <tr><td> GB</td><td>Christian Watson       </td></tr>
@@ -241,6 +241,7 @@
 <tr><td>DAL</td><td>Tony Pollard           </td></tr>
 <tr><td>NYJ</td><td>Breece Hall            </td></tr>
 <tr><td>LAR</td><td>Cam Akers              </td></tr>
+<tr><td>BAL</td><td>Justice Hill           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Jaylen Waddle          </td></tr>
 <tr><td>CLE</td><td>Amari Cooper           </td></tr>
@@ -256,7 +257,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Jahmyr Gibbs           </td></tr>
 <tr><td>CHI</td><td>Roschon Johnson        </td></tr>
-<tr><td>LAR</td><td>Zach Evans             </td></tr>
 <tr><td>CLE</td><td>Dorian ThompsonRobinson</td></tr>
 </table>
 </td>
@@ -273,6 +273,7 @@
 <tr><td>DET</td><td>David Montgomery       </td></tr>
 <tr><td> KC</td><td>Jerick McKinnon        </td></tr>
 <tr><td>BAL</td><td>Gus Edwards            </td></tr>
+<tr><td>CLE</td><td>Jerome Ford            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Cooper Kupp            </td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
@@ -286,7 +287,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>CJ Stroud              </td></tr>
 <tr><td>MIA</td><td>Devon Achane           </td></tr>
-<tr><td>NYG</td><td>Eric Gray              </td></tr>
 <tr><td>LAR</td><td>Puka Nacua             </td></tr>
 </table>
 </td>
