--- a/thousand.html
+++ b/thousand.html
@@ -1179,4 +1179,10 @@
     <td>1000</td>
     <td>John</td>
     <td>450</td></tr>
+<tr><td>2023</td>
+    <td>Week 3</td>
+    <td>Sam Edwards</td>
+    <td>1000</td>
+    <td>States</td>
+    <td>655</td></tr>
 </table>
