--- a/roster.html
+++ b/roster.html
@@ -240,7 +240,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Tony Pollard           </td></tr>
 <tr><td>NYJ</td><td>Breece Hall            </td></tr>
-<tr><td>LAR</td><td>Cam Akers              </td></tr>
+<tr><td>MIN</td><td>Cam Akers              </td></tr>
 <tr><td>BAL</td><td>Justice Hill           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Jaylen Waddle          </td></tr>
