--- a/pickups.html
+++ b/pickups.html
@@ -70,8 +70,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Rashee Rice/Jahan Dotson</td>
+<td width=50>9/28</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
