--- a/roster.html
+++ b/roster.html
@@ -76,7 +76,6 @@
 <tr><td> LV</td><td>Davante Adams          </td></tr>
 <tr><td> SF</td><td>Deebo Samuel           </td></tr>
 <tr><td>TEN</td><td>DeAndre Hopkins        </td></tr>
-<tr><td>WAS</td><td>Jahan Dotson           </td></tr>
 <tr><td>IND</td><td>Michael Pittman        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>TJ Hockenson           </td></tr>
@@ -86,6 +85,7 @@
 <tr><td> NE</td><td>Chad Ryland            </td></tr>
 <tr><td>ARI</td><td>Clayton Tune           </td></tr>
 <tr><td>TEN</td><td>Will Levis             </td></tr>
+<tr><td> KC</td><td>Rashee Rice            </td></tr>
 </table>
 </td>
 </tr>
