--- a/roster.html
+++ b/roster.html
@@ -18,7 +18,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Stefon Diggs           </td></tr>
 <tr><td>PHI</td><td>DeVonta Smith          </td></tr>
-<tr><td>LAC</td><td>Mike Williams          </td></tr>
 <tr><td>CLE</td><td>Elijah Moore           </td></tr>
 <tr><td>HOU</td><td>Nico Collins           </td></tr>
 <tr><td>BAL</td><td>Odell Beckham          </td></tr>
@@ -30,6 +29,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Bijan Robinson         </td></tr>
 <tr><td> GB</td><td>Anders Carlson         </td></tr>
+<tr><td> LV</td><td>Aidan O'Connell        </td></tr>
 </table>
 </td>
 <td valign=top>
