--- a/pickups.html
+++ b/pickups.html
@@ -330,6 +330,7 @@ Free Pickups:<br>
 Sam - Jordan Love/Aaron Rodgers (9/12)<br>
 John - Hunter Henry/Taysom Hill (9/12)<br>
 Roger - Joshua Kelley/JK Dobbins (9/13)<br>
-States - Hayden Hurst/Greg Dulcich (9/20)
+States - Hayden Hurst/Greg Dulcich (9/20)<br>
+Roger - Aidan O'Connell/Mike Williams (9/30)
 </td></tr>
 </table>
