--- a/week4.html
+++ b/week4.html
@@ -57,7 +57,7 @@
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
+<tr><td>Mims</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -142,8 +142,8 @@
 <tr><td>Cousins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
 <tr><td>RJohnson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Kirk</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DCarlson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
