--- a/thousand.html
+++ b/thousand.html
@@ -315,6 +315,12 @@
     <td>1170</td>
     <td>Mike</td>
     <td>465</td></tr>
+<tr><td>2023</td>
+    <td>Week 4</td>
+    <td>Matthew Edwards</td>
+    <td>1170</td>
+    <td>Sam</td>
+    <td>705</td></tr>
 <tr><td>2013</td>
     <td>Week 9</td>
     <td>Rich Fleck</td>
@@ -795,6 +801,12 @@
     <td>1045</td>
     <td>Mike</td>
     <td>775</td></tr>
+<tr><td>2023</td>
+    <td>Week 4</td>
+    <td>Roger Bakos</td>
+    <td>1045</td>
+    <td>Mike</td>
+    <td>430</td></tr>
 <tr><td>2021</td>
     <td>Week 17</td>
     <td>Steven Cohen</td>
