--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 <a href="week1.html"><b>1</b></a>
 <a href="week2.html"><b>2</b></a>
 <a href="week3.html"><b>3</b></a>
-<a href="week4.html"><b>4P</b></a><br>
+<a href="week4.html"><b>4</b></a>
+<a href="week5.html"><b>5P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -61,45 +62,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
+<tr><td><font size=2>Randy(7)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>2600</font></td>
+    <td><font size=2>1915</font></td>
+    <td><font size=2>860</font></td>
+    <td><font size=2>410</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Sam(3)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>2245</font></td>
-    <td><font size=2>1780</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2950</font></td>
+    <td><font size=2>2950</font></td>
     <td><font size=2>1000</font></td>
     <td><font size=2>400</font></td>
     <td><font size=2>2</font></td>
-<tr><td><font size=2>Randy(7)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>2190</font></td>
-    <td><font size=2>1690</font></td>
-    <td><font size=2>860</font></td>
-    <td><font size=2>555</font></td>
-    <td><font size=2>1</font></td>
 <tr><td><font size=2>Grant(9)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1795</font></td>
-    <td><font size=2>1605</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2020</font></td>
+    <td><font size=2>2015</font></td>
     <td><font size=2>680</font></td>
-    <td><font size=2>505</font></td>
+    <td><font size=2>225</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Roger(1)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>2540</font></td>
+    <td><font size=2>2815</font></td>
+    <td><font size=2>1045</font></td>
+    <td><font size=2>430</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>States(5)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1255</font></td>
-    <td><font size=2>1610</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>1710</font></td>
+    <td><font size=2>2575</font></td>
     <td><font size=2>655</font></td>
     <td><font size=2>230</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Roger(1)</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>1495</font></td>
-    <td><font size=2>2385</font></td>
-    <td><font size=2>620</font></td>
-    <td><font size=2>430</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -110,44 +111,44 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>John(4)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1800</font></td>
-    <td><font size=2>1210</font></td>
-    <td><font size=2>765</font></td>
+    <td><font size=2>2765</font></td>
+    <td><font size=2>1665</font></td>
+    <td><font size=2>965</font></td>
     <td><font size=2>385</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Steven(6)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>2410</font></td>
+    <td><font size=2>1730</font></td>
+    <td><font size=2>915</font></td>
+    <td><font size=2>345</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(8)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1820</font></td>
-    <td><font size=2>1800</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2250</font></td>
+    <td><font size=2>2845</font></td>
     <td><font size=2>695</font></td>
-    <td><font size=2>440</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Steven(6)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1495</font></td>
-    <td><font size=2>1280</font></td>
-    <td><font size=2>650</font></td>
-    <td><font size=2>345</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Rich(2)</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1430</font></td>
-    <td><font size=2>1735</font></td>
-    <td><font size=2>705</font></td>
-    <td><font size=2>265</font></td>
+    <td><font size=2>430</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(10)</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>1510</font></td>
-    <td><font size=2>1940</font></td>
-    <td><font size=2>690</font></td>
+    <td><font size=2>2680</font></td>
+    <td><font size=2>2645</font></td>
+    <td><font size=2>1170</font></td>
     <td><font size=2>210</font></td>
+    <td><font size=2>1</font></td>
+<tr><td><font size=2>Rich(2)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>1880</font></td>
+    <td><font size=2>2650</font></td>
+    <td><font size=2>705</font></td>
+    <td><font size=2>265</font></td>
     <td><font size=2>0</font></td>
 </table>
 </table>
